--- a/modules/complex-number/CMakeLists.txt
+++ b/modules/complex-number/CMakeLists.txt
@@ -6,7 +6,7 @@ set(TESTS       "test_${MODULE}")
 set(APPLICATION "app_${MODULE}")
 
 # Include directory with public headers
-include_directories("./")
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add all submodules
 add_subdirectory(src)
